--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,10 @@
   "retainLines": true,
   "compact": true,
   "comments": false,
-  "presets": ["es2015"],
+  "presets": [
+    "es2015",
+    "react"
+  ],
   "plugins": [
     "syntax-async-functions",
     "syntax-class-properties",
