--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   ],
   "devDependencies": {
     "babel": "^6.3.26",
+    "babel-core": "^6.9.0",
     "babel-jest": "^6.0.1",
     "babel-preset-airbnb": "^1.0.1",
     "babel-preset-es2015": "^6.6.0",
