--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "react-dom": "0.14.8",
     "react-native": "0.25.1",
     "react-native-mock": "^0.1.0"
-  }
+  },
+	"repository": {
+		"url": "https://github.com/wkh237/react-native-fetch-blob.git"
+	}
 }
