--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-native-animate-number",
   "version": "0.1.2",
   "description": "",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha -t 5000 --require react-native-mock/mock --compilers js:babel-core/register --recursive test/*.js"
   },
