--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-animate-number",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "",
   "main": "index.js",
   "author": "wkh237",
@@ -16,6 +16,6 @@
     "animation"
   ],
 	"repository": {
-		"url": "https://github.com/wkh237/react-native-fetch-blob.git"
+		"url": "https://github.com/cmcleese/react-native-animate-number/"
 	}
 }
